[package]
name = "are"
version = "1.0.0"
edition = "2021"
description = "Another Rust Editor - A port of the aee terminal-based text editor to Rust"
license = "Artistic-2.0"
authors = ["Converted from C to Rust"]

[dependencies]
cursive = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
libc = "0.2"
lazy_static = "1.4"
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.27"
